--- a/src/Container/Container.css
+++ b/src/Container/Container.css
@@ -383,7 +383,117 @@
   color: #1a23ff;
   margin: 0;
 }
+
+.project-ctn {
+  grid-column: 2/13;
+  grid-row: 6/7;
+  display: grid;
+  grid-template-columns: repeat(9, minmax(1rem, 1fr));
+  grid-template-rows: repeat(6, min-content);
+  margin-top: 5rem;
+}
+
+.projects {
+  width: 100%;
+  margin-top: 10rem;
+}
+
+.projects img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.projects h4 {
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.2rem;
+  line-height: 2.8rem;
+  text-transform: capitalize;
+  color: #000113;
+  margin: 1rem 0 0;
+}
+
+.projects p {
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: rgba(0, 1, 19, 0.69);
+}
+
+.project-one {
+  grid-column: 1/6;
+  grid-row: 1/2;
+}
+
+.project-two {
+  grid-column: 5/-1;
+  grid-row: 2/3;
+}
+
+.project-three {
+  grid-column: 1/6;
+  grid-row: 3/4;
+}
+
+.project-four {
+  grid-column: 5/-1;
+  grid-row: 4/5;
+}
+
+.project-five {
+  grid-column: 1/6;
+  grid-row: 5/6;
+}
+
+.project-six {
+  grid-column: 5/-1;
+  grid-row: 6/7;
+}
 /* project end */
+
+.ring-ctn-three {
+  grid-column: 13/14;
+}
+
+.ring-ctn-three .ring-one {
+  position: absolute;
+  width: 60px;
+  height: 200px;
+  border: 4px solid rgba(0, 6, 138, 0.8);
+  border-radius: 50%;
+  transform: rotate(43.41deg);
+  filter: blur(4px);
+  top: 1323.43px;
+  right: -40px;
+}
+
+.ring-ctn-three .ring-two {
+  position: absolute;
+  width: 60px;
+  height: 200px;
+  border: 4px solid rgba(0, 6, 138, 0.8);
+  border-radius: 50%;
+  transform: rotate(43.41deg);
+  filter: blur(4px);
+  top: 1339.71px;
+  right: -50px;
+}
+
+.ring-ctn-three .ring-three {
+  position: absolute;
+  width: 60px;
+  height: 200px;
+  border: 4px solid rgba(0, 6, 138, 0.8);
+  border-radius: 50%;
+  transform: rotate(43.41deg);
+  filter: blur(4px);
+  top: 1355.98px;
+  right: -60px;
+}
 
 @media (max-width: 1200px) {
   .social-icons {
@@ -547,6 +657,10 @@
     font-size: 6rem;
     line-height: 40px;
   }
+
+  .ring-ctn-three {
+    display: none;
+  }
 }
 
 @media (max-width: 540px) {
@@ -562,6 +676,11 @@
   .social-icons {
     grid-column: 8/13;
   }
+
+  .header-ring-ctn {
+    display: none;
+  }
+
   .header-ctn .header-title h2 {
     font-size: 4rem;
   }
@@ -591,12 +710,22 @@
   .project-title-two {
     font-size: 5rem;
   }
+  .projects h4 {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+  }
+
+  .projects p {
+    font-size: 1.1rem;
+    line-height: 1rem;
+  }
 }
 
 @media (max-width: 350px) {
   .social-icons {
     grid-column: 6/13;
   }
+
   .header-ctn .header-title h2 {
     font-size: 3rem;
   }
