--- a/src/Container/Container.css
+++ b/src/Container/Container.css
@@ -494,6 +494,61 @@
   top: 1355.98px;
   right: -60px;
 }
+/* about-me start */
+.about-me-ctn {
+  grid-column: 1/-1;
+  grid-row: 7/8;
+  display: grid;
+  grid-template-columns: repeat(10, minmax(1rem, 1fr));
+  grid-template-rows: repeat(3, min-content);
+  margin-top: 10rem;
+  position: relative;
+}
+
+.about-me-title-ctn {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: repeat(10, minmax(min-content, 1fr));
+  grid-template-rows: repeat(2, min-content);
+}
+
+.about-me-title-ctn .title-one {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  text-align: end;
+  margin: 0;
+}
+
+.about-me-title-ctn .title-one h4 {
+  font-family: "Clash Display", sans-serif;
+  font-weight: 500;
+  font-size: 13rem;
+  line-height: 15rem;
+  text-transform: uppercase;
+  color: #000113;
+  margin: 0;
+  gap: 0;
+}
+
+.about-me-title-ctn .title-two h4 {
+  font-family: "Clash Display", sans-serif;
+  font-weight: 500;
+  font-size: 7.2rem;
+  line-height: 4rem;
+  text-transform: uppercase;
+  color: #1a23ff;
+  margin: 0;
+}
+
+.about-me-title-ctn .title-two {
+  grid-column: 6/7;
+  grid-row: 2/3;
+  margin: 0;
+  gap: 0;
+}
+
+/* about-me end */
 
 @media (max-width: 1200px) {
   .social-icons {
@@ -661,6 +716,16 @@
   .ring-ctn-three {
     display: none;
   }
+
+  .about-me-title-ctn .title-one h4 {
+    font-size: 8rem;
+    line-height: 8rem;
+  }
+
+  .about-me-title-ctn .title-two h4 {
+    font-size: 4.2rem;
+    line-height: 2rem;
+  }
 }
 
 @media (max-width: 540px) {
@@ -741,5 +806,15 @@
   .project-title-two {
     font-size: 4rem;
     line-height: 20px;
+  }
+
+  .about-me-title-ctn .title-one h4 {
+    font-size: 5rem;
+    line-height: 2rem;
+  }
+
+  .about-me-title-ctn .title-two h4 {
+    font-size: 2.2rem;
+    line-height: 2rem;
   }
 }
